// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: Button render active style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ eZqLKO"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render block style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ eRJqDU"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render component disabled 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ cCaHOj"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render component with icon 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ cCaHOj"
  >
    <img
      src="test-file-stub"
    />
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render the component 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ cCaHOj"
  >
    Hello world
  </button>
</DocumentFragment>
`;
